<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:padding="@dimen/_10sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/pop_semi_bold"
                android:gravity="center"
                android:text="User-Generated Content Policy"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/pop_med"
                android:gravity="center"
                android:text="Welcome to"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/_20sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/pop_med"
                android:gravity="center"
                android:text="Live Video Call"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/_25sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="fill"
                android:text="before starting please accept our policy :"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_toRightOf="@+id/ic_back"
                android:fontFamily="@font/roboto_regular"
                android:gravity="fill"
                android:text="@string/policy_granted1"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_toRightOf="@+id/ic_back"
                android:fontFamily="@font/roboto_regular"
                android:gravity="fill"
                android:text="@string/policy_granted2"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_toRightOf="@+id/ic_back"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/policy_granted3"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_toRightOf="@+id/ic_back"
                android:fontFamily="@font/roboto_regular"
                android:gravity="fill"
                android:text="@string/policy_granted4"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_toRightOf="@+id/ic_back"
                android:fontFamily="@font/roboto_regular"
                android:gravity="fill"
                android:text="@string/policy_granted5"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_toRightOf="@+id/ic_back"
                android:fontFamily="@font/roboto_regular"
                android:gravity="fill"
                android:text="@string/policy_granted6"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_toRightOf="@+id/ic_back"
            android:background="@drawable/round1"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="Accept"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_decline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_toRightOf="@+id/ic_back"
            android:background="@drawable/round1"
            android:backgroundTint="@color/fgColor"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="Decline"
            android:textColor="@color/grey2"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
