<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg">

    <include
        android:id="@+id/toolKit"
        layout="@layout/toolkit" />

    <FrameLayout
        android:id="@+id/parentAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolKit"
        android:layout_gravity="center">

        <FrameLayout
            android:id="@+id/native_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/parentAds">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/vector_pro"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_150sdp"
                        android:layout_gravity="center"
                        android:layout_marginVertical="@dimen/_20sdp"
                        android:layout_marginTop="5dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/vector_age"
                        android:visibility="visible" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="@dimen/_8sdp"
                        android:layout_marginLeft="@dimen/_16sdp"
                        android:enabled="false"
                        android:fontFamily="@font/pop_italic"
                        android:paddingVertical="@dimen/_8sdp"
                        android:text="@string/age_group_head"
                        android:textColor="@color/text_secondary"
                        android:textSize="@dimen/_12sdp" />


                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_6sdp">

                        <RadioButton
                            android:id="@+id/r1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:buttonTint="@color/text_primary"
                            android:checked="true"
                            android:fontFamily="@font/pop_reg"
                            android:text="@string/age_group_one"
                            android:textSize="18dp" />

                        <RadioButton
                            android:id="@+id/r2"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/_15sdp"
                            android:buttonTint="@color/text_primary"
                            android:checked="false"
                            android:fontFamily="@font/pop_reg"
                            android:text="@string/age_group_two"
                            android:textSize="18dp" />

                        <RadioButton
                            android:id="@+id/r3"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:buttonTint="@color/text_primary"
                            android:checked="false"
                            android:fontFamily="@font/pop_reg"
                            android:text="@string/age_group_three"
                            android:textSize="18dp" />

                    </RadioGroup>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/age_next"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginVertical="5dp"
                        android:background="@drawable/ad_exit_three"
                        android:gravity="center"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:text="Continue"
                        android:textAllCaps="true"
                        android:textColor="@color/text_primary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>